--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
+<a href="recipes/meatballs.html">Mouthwatering Homemade Meatballs</a>
 </body>
 </html>
