Fixed typo line 13 Fixed a typo from "quck" to "quick"

--- a/meatballs.html
+++ b/meatballs.html
@@ -10,7 +10,7 @@
     <h1>Mouthwatering Homemade Meatballs</h1>
 
     <h2>Description</h2>
-    <p>These quck and easy meatballs are the perfect addition to your favorite spaghetti, for making a delicious meatball sub, or as a delicious protein-filled snack!</p>
+    <p>These quick and easy meatballs are the perfect addition to your favorite spaghetti, for making a delicious meatball sub, or as a delicious protein-filled snack!</p>
     <p>Yields: 12 meatballs</p>
 
     <h2>Ingredients</h2>
