--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-<a href="recipes/meatballs.html">Mouthwatering Homemade Meatballs</a>
-</body>
+    <ul>
+        <li><a href="recipes/meatballs.html">Mouthwatering Homemade Meatballs</a></li>
+        <li><a href="recipes/cheeseburgers.html">Superstar Cheeseburgers</a></li>
+        <li><a href="recipes/lasagna.html">Ristorante Lasagna</a></li>
+    </ul>
+    </body>
 </html>
